--- a/custom.css
+++ b/custom.css
@@ -37,9 +37,9 @@
 	display: none;
 }
 
-/*Semi-fixed buttons*/
+/* Semi-fixed buttons */
 .winButton__88672 {
-	height: 100% !important;
+	height: 260%;
 	padding-top: 0.5%;
 }
 
